# django-dmcadmin

./: LICENSE  MANIFEST.in  README.rst  setup.cfg
django_dmcadmin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dmcadmin/: apps.py  forms.py  urls.py  views.py
dmcadmin/static/managecommand/conf/: manage_command.conf
dmcadmin/templates/dmcadmin/: index.html  manage_command.html  manage_task.html  manage_task_list.html
dmcadmin/templates/dmcadmin/base/: base.html  content_boxes.html  content_header.html  login.html  navbar.html  sidebar.html
