[metadata]
name = django-dmcadmin
version = 0.1.1
description = Django Manage Command Admin - a web-based app for managing the execution of Django manage commands.
long_description = file: README.rst
url = https://github.com/hairetdin/django-dmcadmin
author = hairetdin
author_email = amir.hairetdinov@gmail.com
license = MIT
setup_requires=['psutil']
install_requires=['psutil']
python_requires='>=3.5',
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: